work on link converter, updated navbar bug where icons would appear off screen

--- a/data/components/globalstyle.css
+++ b/data/components/globalstyle.css
@@ -92,8 +92,8 @@
     width: 100%;
 }
 .navbar-icon-normal-container {
-    height: 21px;
-    width: 21px;
+    height: 18px;
+    width: 18px;
 }
 .navbar-icon-normal {
     display: block;
@@ -152,13 +152,12 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    align-items: center;
 }
 .component-page-navbar ul li {
-    float: left;
     margin-right: 20px;
 }
-@media (max-width: 768px) {
+@media (max-width: 920px) {
     .component-page-navbar ul li {
         margin-right: 10px;
     }
@@ -166,7 +165,7 @@
 .navbar-search-icon {
     display: none;
 }
-@media (max-width: 768px) {
+@media (max-width: 920px) {
     #navbar-search-input {
         display: none;
     }
